--- a/manifest.yml
+++ b/manifest.yml
@@ -15,7 +15,7 @@ include_files:
 url_to_dependency_map:
   - match: node\/v(\d+\.\d+\.\d+)
     name: node
-    version: "$1"
+    version: '$1'
 dependencies:
   - name: node
     version: 12.13.0
