--- a/manifest.yml
+++ b/manifest.yml
@@ -15,6 +15,8 @@ include_files:
   - bin/supply
   - instantclient-basic-linux.x64-19.3.zip
   - instantclient-sdk-linux.x64-19.3.zip
+  - instantclient-basic-linux.x64-12.2.0.1.0.zip
+  - instantclient-sdk-linux.x64-12.2.0.1.0.zip
   - node-v12.13.0-linux-x64.tar.gz
   - node-v8.16.2-linux-x64.tar.gz
   - profile/nodejs.sh
